# priority

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
migrations/versions/: 00bfa37ec632_add_user_table.py  385751baffee_make_deadline_and_created_at_timezone_.py  c2c6ef2ccfd0_.py  d61f7a037352_make_deadline_timedelta.py
src/config/: settings.py
src/priority/: __init__.py  auth.py  errors.py  extensions.py  me.py  models.py  rules.py  schemas.py  tasks.py  utils.py
src/priority/api/: __init__.py  me.py  rules.py  tasks.py
src/priority/api/auth/: __init__.py  routes.py  schemas.py  service.py
src/priority/api/rules/: models.py  routes.py  schemas.py  service.py
src/priority/api/tasks/: models.py  routes.py  schemas.py  service.py
src/priority/api/users/: __init__.py  me.py  models.py  routes.py  schemas.py  service.py
src/priority/auth/: __init__.py  routes.py
src/priority/core/: __init__.py  priority_service.py
src/priority/models/: __init__.py  user.py
src/priority/services/: priority_service.py
tests/: conftest.py  test_utils.py
tests/auth/: test_auth_routes.py
tests/core/: test_condition_evaluator.py  test_priority_calculator.py
tests/rules/: test_rules_routes.py  test_rules_service.py
tests/tasks/: test_tasks_routes.py  test_tasks_service.py
tests/users/: test_service.py  test_users_routes.py  test_users_service.py
