[project]
name = "priority"
version = "0.1.0"
description = "A task prioritization API with customizable rules"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "n"}
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "spectree (>=1.5.4,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "sqlalchemy-utils (>=0.42.0,<0.43.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
